lab1/Test/L1-A-9-8.cmm
float UOsjq ( ) {
  if ( x_ )   gPzp4uoXX_VWz ;
else   if ( CiVPBS4nBcVNwDkC )   while ( VZJXLdm45iv 
    )   return kdCgm >= JrEXH * ! - KwSKg6oNEjsWbnKSMo 
    [ mBPvKU = UH3G0PlfmbNE37lger8a || WkXZRtjhOAi2R_3QHH4c 
    && gc != f3 + YIuWDd58mgYL / EhCNxQ4m69hlXAQri ( zGVqESF4_1PNePSj 
    , f1ELRHEh3BnvFjtZ0W6 && Nnip7c8dZp2XOezJ3Z == TFY_pQH2m_Oe 
    * BIe5LvieR47huGaH7OU6 ( RL4nCOoaY2Yj_oecUG , bHjKsxhwKLUZaeHsI 
    , eXVJXw2ZkIN0ZQi = = Q6A0mt = NaVnOLFa08oSxa || aZU0w1RlK31JWM6gD 
    && SCa6Z15 > A53fr - JBV0O8N / ( HAFQIUPZXomOY35A 
    <= ( urRKK || M && l < aGfqJARUTRSCG6 ) + ko1tZW9 
    . ON4RN0tn8wnciiyUqx ) / 898915153 ) + ! 23528282.1518240217 
    || - - iEox025Zo4kGU - - ryCXztghYVI ( ) ) ] . wU7PnpalU8a7Rkvnj7 
    ;



}
struct int Q = JWmWiTZsA9X ;
};
struct Cry6X6YYBsfOsiZ zUycYT5 [ 1364115255 ] 
;
int _aS07A8TdUvE , JK6rRaG 

;
int q5XY3jsg6ZNLBvS ( int HE7GxvQU , int Qpt ) {
  int Z ;
  int bOm5EIEWJjbhM ;
  int WPjGVBzH , kUXpvA ;
}
struct o3BZkcHFKu };
int A_no ( ) {
{
    if ( bqHMdXY4KvJD04c5 )     JcMTMWfTjYLVmlTQe 
      ;
else     h688EGK70Eb ;

  }}
int ;
int ;
